ingress_exa/internal-ingriss.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  selector:
    app: ingress
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
