ingress_exa/service-ext-ingress-exa.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-ingress
spec:
  selector:
    app: myingress
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 35010
